[project]
name = "fastapi-filterdeps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "psycopg2>=2.9.10",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "testcontainers>=4.10.0",
]
examples = [
    "uvicorn>=0.34.3",
]
