[project]
name = "fastapi-filterdeps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.14",
    "python-dateutil>=2.4.0",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "psycopg2>=2.9.10",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "testcontainers>=4.10.0",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-napoleon>=0.7",
]
examples = [
    "uvicorn>=0.35.0",
]
